--- a/dtd.html
+++ b/dtd.html
@@ -102,7 +102,8 @@
 								<div class="slider-wrap">
 									<div class="slide"><img src="images/projects/dtd/cad.jpg" alt=""></div>
 									<div class="slide"><img src="images/projects/dtd/step1.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/drawer.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dtd/step2.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dtd/final.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -123,7 +124,7 @@
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_edi7bB8CqKRETKgxmRvrfA" target="_blank"> Demo Video</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
 									</ul>
 								</div>
 							</div>
@@ -139,12 +140,19 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>This was my very first design course and I was given the freedom to pursue absolutely anything design-related. Obviously, I chose to build a stool.
+							<p>
+								This was my very first design course and I was given the freedom to pursue absolutely anything design-related. Obviously, I chose to build a stool.
+								<br><br>However, just building a stool would make it too easy. To make things more difficult, I decide to do everything from scratch – that includes sourcing for materials, designing the stool, cutting the wood to size, assembling the pieces and applying the finishing touches. Having never physically built anything in a workshop prior to this, I thought that it would be easy. I was never so wrong.
+								<br><br>I started by creating a CAD to visualise my design. My initial concept was to create dovetail joints, so that no nails or glue would be required to hold the stool together. I brought my concept down to the workshop and it was instantly dismissed – the workshop was not equipped with the appropriate woodworking tools for making such accurate geometric cuts. I learnt my first lesson that day – no matter how fancy the design is, if it cannot be realised practically, it is worthless. 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the 
+							<p>
+								I went back to the drawing board and soon decided to go with a simple square joint instead. With professional advice from the workshop trainers, I sourced for appropriate materials for my wooden stool – cedar dimensional lumber for the legs and oak plywood for the top and the skirts. 
+								<br><br>After that was where the fun began. I learnt how to operate the various power tools in the shop and got to work preparing all the parts of the stool. 
+								<br><br>I wrapped up the entire project by sanding the rough edges and applying varnish to the exposed surfaces. It turned out to be so well-made that I used it in my room. 
+								<br><br>Through this project, I learnt that design and manufacturing goes hand in hand, and it had been a humbling lesson on practicality.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
