--- a/dtd.html
+++ b/dtd.html
@@ -141,18 +141,15 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								This was my very first design course and I was given the freedom to pursue absolutely anything design-related. Obviously, I chose to build a stool.
-								<br><br>However, just building a stool would make it too easy. To make things more difficult, I decide to do everything from scratch – that includes sourcing for materials, designing the stool, cutting the wood to size, assembling the pieces and applying the finishing touches. Having never physically built anything in a workshop prior to this, I thought that it would be easy. I was never so wrong.
-								<br><br>I started by creating a CAD to visualise my design. My initial concept was to create dovetail joints, so that no nails or glue would be required to hold the stool together. I brought my concept down to the workshop and it was instantly dismissed – the workshop was not equipped with the appropriate woodworking tools for making such accurate geometric cuts. I learnt my first lesson that day – no matter how fancy the design is, if it cannot be realised practically, it is worthless. 
+								This was my very first design course and I was given the freedom to pursue absolutely anything design-related; I chose to build a stool. However, I thought that just building a stool would be too easy. To challenge myself, I decided to do everything from scratch – from sourcing for materials, to designing and building the stool. Having never built anything in a workshop prior to this, I thought that it would be easy.
+								<br><br>I started by creating a CAD to visualise my design. My initial concept was to create dovetail joints, so that no nails or glue would be required to hold the stool together. I brought my initial concept down to the workshop and was instantly dismissed – the workshop was not equipped with the appropriate woodworking tools for making such accurate geometric cuts. I learnt my first lesson that day – no matter how aesthetic the design is, if it cannot be realised practically, it is worthless. 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>
-								I went back to the drawing board and soon decided to go with a simple square joint instead. With professional advice from the workshop trainers, I sourced for appropriate materials for my wooden stool – cedar dimensional lumber for the legs and oak plywood for the top and the skirts. 
-								<br><br>After that was where the fun began. I learnt how to operate the various power tools in the shop and got to work preparing all the parts of the stool. 
-								<br><br>I wrapped up the entire project by sanding the rough edges and applying varnish to the exposed surfaces. It turned out to be so well-made that I used it in my room. 
-								<br><br>Through this project, I learnt that design and manufacturing goes hand in hand, and it had been a humbling lesson on practicality.
+								I went back to the drawing board and soon decided to go with a simple square joint instead. With professional advice from the workshop trainers, I sourced for appropriate materials for my wooden stool – cedar dimensional lumber for the legs and oak plywood for the top and the skirts. In order to prepare all 14 pieces required for the stool, I learnt how to operate the various power tools in the shop. In addition, due to the revised joints, I had to fall back on nail gun and wood glue to hold the pieces in place. I wrapped up the entire project by sanding the rough edges and applying varnish to the exposed surfaces.  
+								<br><br>The stool turned out to be so well-made that I used it in my room. Through this project, I learnt that design and manufacturing goes hand in hand, and it had been a humbling lesson on the importance of practicality.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -165,7 +162,7 @@
 
 					<!-- Other Portfolio Items
 					============================================= -->
-					<h4>Other Works:</h4>
+					<h4 class="related-works">Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
 
@@ -212,7 +209,7 @@
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Dyson Internship">
+										<a href="dyson.html" class="social-icon" title="Dyson Internship">
 											<h4>A 10-week internship program with Dyson UK that proved to be a great learning experience.</h4>
 										</a>
 									</div>
