--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 									<div class="team-image">
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Dyson Internship">
+											<a href="dyson.html" class="social-icon" title="Dyson Internship">
 												<h3>A 10-week internship program with Dyson UK that proved to be a great learning experience.
 												</h3>
 											</a>
