--- a/nickel.html
+++ b/nickel.html
@@ -160,7 +160,7 @@
 
 					<!-- Other Portfolio Items
 					============================================= -->
-					<h4>Other Works:</h4>
+					<h4 class="related-works">Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
 
@@ -207,7 +207,7 @@
 										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Dyson Internship">
+										<a href="dyson.html" class="social-icon" title="Dyson Internship">
 											<h4>A 10-week internship program with Dyson UK that proved to be a great learning experience.</h4>
 										</a>
 									</div>
