--- a/dyson.html
+++ b/dyson.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Mechatronics</title>
+	<title>Yao Xin Meng | Dyson Internship</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Mechatronics</h1>
+				<h1>Dyson UK Internship</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -93,15 +93,14 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery - ME333
+					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">ME333 - Introduction to Mechatronics</h2>
+					<h2 class="t300 bottommargin-sm">My first internship outside of Singapore</h2>
 					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="true" data-animation="slide">
+						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics/schematics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics/results.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dyson/app.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -115,14 +114,14 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> September 2018</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> MATLAB | Simulink | App Designer</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Video Demonstration</a></li>
+										<li><span><i class="icon-users"></i>Team Members:</span> Adrien Feve</li>
+										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
 									</ul>
 								</div>
 							</div>
@@ -139,88 +138,16 @@
 						============================================= -->
 						<div class="col_half nobottommargin">
 							<p>
-								The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
-								<br><br>This project was the culmination of all the lessons learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and MATLAB to program the client interface
-								<br><strong>&#183 Peripherals</strong> - Programming the pins on the microcontroller to be digital or analog I/O pins
-								<br><strong>&#183 Interrupts</strong> - Writing Interrupt Service Routines so that the CPU can be freed up for other operations
+								The goal of my 10-week internship was to create a battery model using Matlab and to interface the model with a GUI that can be easily used by design engineers. There are therefore two main components to my project: 
+								<br><br>The first part involves the development of a battery model of reasonable fidelity and simplicity using the Simulink/Simscape tools within Matlab. The physical accuracy of the model can be determined by comparing the simulated data with actual experimental results. 
+								<br><br>The second part is the development of a user-friendly application using the App Designer feature of Matlab. As the shift to a more model based design culture is still in its early stages, it is expected for my model to be developed further in the future. It is therefore crucial that my code is written such that it will be easy to integrate future models into my current model.
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
 							<p>
-								<strong>&#183 UART</strong> - Serial Communication between microcrontroller and computer
-								<br><strong>&#183 PID control</strong> - Implement PID control using PWM output based on the position input from encoder
-								<br><strong>&#183 Motors</strong> - Using the motor specs to determine the optimal working voltage and current
-								<br><br>Due to the numerous challenges faced while working on the assignment, I learnt to troubleshoot effectively. As the problem could be either due to hardware, software, or a mix of both, the main challenge lies in isolating the source of the problem. As a result, I learnt to create checkpoints in my code (such as the flashing of LED) and split the hardware into smaller modules.
-							</p>
-						</div>
-						<!-- Portfolio Single - Description End -->
-
-					</div><!-- .portfolio-single-content end -->
-
-					<div class="clear"></div>
-
-					<div class="divider divider-center"><i class="icon-circle"></i></div>
-
-					<!-- Portfolio Single Gallery - ME433
-					============================================= -->
-					<h2 class="t300 bottommargin-sm">ME433 - Advanced Mechatronics</h2>
-					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="true" data-animation="slide">
-							<div class="flexslider">
-								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-								</div>
-							</div>
-						</div>
-					</div><!-- .portfolio-single-image end -->
-
-					<div class="col_full portfolio-single-image">
-
-						<!-- Portfolio Single - Meta
-						============================================= -->
-						<div class="card events-meta">
-							<div class="card-body">
-								<div class="col_half nobottommargin">
-									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Harmony | EAGLE | Python</li>
-									</ul>
-								</div>
-								<div class="col_half col_last nobottommargin">
-									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Video Demonstrations</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- Portfolio Single - Meta End -->
-						
-					</div>
-
-					<!-- Portfolio Single Content
-					============================================= -->
-					<div class="portfolio-single nobottommargin">
-
-						<!-- Portfolio Single - Description
-						============================================= -->
-						<div class="col_half nobottommargin">
-							<p>
-								MECH_ENG 433 was an extension of MECH_ENG 333. Through a series of assignements, we gained the skills required for the final assignment of MECH_ENG 433 – create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
-								<br><br>For the final assignment, I had to apply all the skills learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and Python to program the client interface
-								<br><strong>&#183 Peripherals</strong> - 
-								<br><strong>&#183 Serial Communication</strong> - 
-							</p>
-						</div>
-
-						<div class="col_half col_last nobottommargin">
-							<p>
-								<strong>&#183 Digital Signal Processing</strong> - Serial Communication between microcrontroller and computer
-								<br><br>More info after course actually ends after this quarter.
+								It was a daunting task that required extensive experience with MATLAB as well as technical expertise in electrical and thermal behaviour of batteries. Despite the fact that I had little prior knowledge in either of these fields, I still decided to accept the challenge. As a result, I was forced to adapt quickly – not just to work, but also to a foreign country. With a learning mindset, I engrossed myself in the work and taught myself the basics of MATLAB, Simulink, Simscape and MATLAB App Designer within the first 2 weeks.
+								<br><br>In the remaining 8 weeks, I built upon the MATLAB code and Simulink model created by my predecessor and added more features to it. I also integrated them with App Designer to create a GUI for those who are not familiar with MATLAB or Simulink. By the end of my internship, I have fulfilled my initial goal by creating a working app that could be used by design engineers. It also went on to become used as a MATLAB training tool for Dyson engineers.
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -236,6 +163,24 @@
 					<h4 class="related-works">Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
+											<h4>A series of projects that were done as part of the Northwestern University Mechatronics courses.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
 
 						<div class="oc-item">
 							<div class="iportfolio">
@@ -269,24 +214,6 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Design Thinking and Doing</h3>
-								</div>
-							</div>
-						</div>
-
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/projects/dyson.jpg" alt="Dyson Internship">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="dyson.html" class="social-icon" title="Dyson Internship">
-											<h4>A 10-week internship program with Dyson UK that proved to be a great learning experience.</h4>
-										</a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3>Dyson Internship</h3>
 								</div>
 							</div>
 						</div>
