--- a/dyson.html
+++ b/dyson.html
@@ -225,7 +225,7 @@
 										<img src="images/projects/design.jpg" alt="Industrial Design">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Industrial Design">
+										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
 											<h4>A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.</h4>
 										</a>
 									</div>
