--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 									<div class="team-image">
 										<img src="images/projects/design.jpg" alt="Industrial Design">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Industrial Design">
+											<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
 												<h3>A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.
 												</h3>
 											</a>
