--- a/industrialdesign.html
+++ b/industrialdesign.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Mechatronics</title>
+	<title>Yao Xin Meng | Industrial Design</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Mechatronics</h1>
+				<h1>Industrial Design Works</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -93,15 +93,14 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery - ME333
+					<!-- Portfolio Single Gallery - Industrial Design Intro
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">ME333 - Introduction to Mechatronics</h2>
+					<h2 class="t300 bottommargin-sm">These sketches chronicle my first attempts at industrial design.</h2>
 					<div class="col_full portfolio-single-image">
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics/schematics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics/results.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/dyson/app.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -116,13 +115,13 @@
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-calendar-check"></i>Completed on:</span> March 2019</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> C | MATLAB</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> Sketching | Product Design</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
 										<li><span><i class="icon-users"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/embed/odl52fTSrSQ" target="_blank"> Video Demonstration</a></li>
+										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
 									</ul>
 								</div>
 							</div>
@@ -131,29 +130,31 @@
 						
 					</div>
 
+					<div class="clear"></div>
+
+					<div class="divider divider-center"><i class="icon-circle"></i></div>
+
+					<!-- Portfolio Single Gallery - Bus Stop
+					============================================= -->
+					<h2 class="t300 bottommargin-sm">Bus Stop</h2>
+					<div class="col_full portfolio-single-image">
+						<div class="fslider" data-arrows="false" data-animation="slide">
+							<div class="flexslider">
+								<div class="slider-wrap">
+									<div class="slide"><img src="images/projects/industrial/bus_final.jpg" alt=""></div>
+								</div>
+							</div>
+						</div>
+					</div><!-- .portfolio-single-image end -->
+
 					<!-- Portfolio Single Content
 					============================================= -->
 					<div class="portfolio-single nobottommargin">
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="col_half nobottommargin">
-							<p>
-								The final project of MECH_ENG 333 was to create a robot arm that could follow a user-defined trajectory in MATLAB. The software for the microcontroller was built using C, and the user interface using MATLAB.
-								<br><br>This project was the culmination of all the lessons learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and MATLAB to program the client interface
-								<br><strong>&#183 Peripherals</strong> - Programming the pins on the microcontroller to be digital or analog I/O pins
-								<br><strong>&#183 Interrupts</strong> - Writing Interrupt Service Routines so that the CPU can be freed up for other operations
-							</p>
-						</div>
-
-						<div class="col_half col_last nobottommargin">
-							<p>
-								<strong>&#183 UART</strong> - Serial Communication between microcrontroller and computer
-								<br><strong>&#183 PID control</strong> - Implement PID control using PWM output based on the position input from encoder
-								<br><strong>&#183 Motors</strong> - Using the motor specs to determine the optimal working voltage and current
-								<br><br>Due to the numerous challenges faced while working on the assignment, I learnt to troubleshoot effectively. As the problem could be either due to hardware, software, or a mix of both, the main challenge lies in isolating the source of the problem. As a result, I learnt to create checkpoints in my code (such as the flashing of LED) and split the hardware into smaller modules.
-							</p>
+						<div class="col_full_text col_full nobottommargin">
+							<p>Architectural pieces have a sense of permanence and publicity that many other objects do not have. As such, it took me significantly longer to come up with a bus stop design that I was satisfied with. I wanted this piece to be more than just a shelter for commuters; I wanted it to be a public art piece that can be admired from any angle.</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -163,43 +164,18 @@
 
 					<div class="divider divider-center"><i class="icon-circle"></i></div>
 
-					<!-- Portfolio Single Gallery - ME433
+					<!-- Portfolio Single Gallery - Backpack
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">ME433 - Advanced Mechatronics</h2>
+					<h2 class="t300 bottommargin-sm">Backpack</h2>
 					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="true" data-animation="slide">
+						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/mechatronics.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/industrial/bag_final.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
 					</div><!-- .portfolio-single-image end -->
-
-					<div class="col_full portfolio-single-image">
-
-						<!-- Portfolio Single - Meta
-						============================================= -->
-						<div class="card events-meta">
-							<div class="card-body">
-								<div class="col_half nobottommargin">
-									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-									<li><span><i class="icon-lightbulb"></i>Skills:</span> C | Harmony | EAGLE | Python</li>
-									</ul>
-								</div>
-								<div class="col_half col_last nobottommargin">
-									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar"></i>Team Members:</span> Individual</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_eygGGwJLSBUCV-q6pgxNd4" target="_blank"> Video Demonstrations</a></li>
-									</ul>
-								</div>
-							</div>
-						</div>
-						<!-- Portfolio Single - Meta End -->
-						
-					</div>
 
 					<!-- Portfolio Single Content
 					============================================= -->
@@ -207,21 +183,38 @@
 
 						<!-- Portfolio Single - Description
 						============================================= -->
-						<div class="col_half nobottommargin">
-							<p>
-								MECH_ENG 433 was an extension of MECH_ENG 333. Through a series of assignements, we gained the skills required for the final assignment of MECH_ENG 433 – create a toy car that could navigate a race track using cues from the environment. The course ended with a friendly competition between the students to see how well each of our creations fared on the track.
-								<br><br>For the final assignment, I had to apply all the skills learnt over the quarter: 
-								<br><strong>&#183 Coding</strong> - Using C to program the microcontroller and Python to program the client interface
-								<br><strong>&#183 Peripherals</strong> - 
-								<br><strong>&#183 Serial Communication</strong> - 
-							</p>
+						<div class="col_full_text col_full nobottommargin">
+							<p>I wanted to design a backpack for the Northwestern Sailing Club that promotes school spirit. At the same time, I wanted people to associate the bag with the club without any explicit symbols or features.</p>
 						</div>
+						<!-- Portfolio Single - Description End -->
 
-						<div class="col_half col_last nobottommargin">
-							<p>
-								<strong>&#183 Digital Signal Processing</strong> - Serial Communication between microcrontroller and computer
-								<br><br>More info after course actually ends after this quarter.
-							</p>
+					</div><!-- .portfolio-single-content end -->
+
+					<div class="clear"></div>
+
+					<div class="divider divider-center"><i class="icon-circle"></i></div>
+
+					<!-- Portfolio Single Gallery - Furniture
+					============================================= -->
+					<h2 class="t300 bottommargin-sm">Furniture</h2>
+					<div class="col_full portfolio-single-image">
+						<div class="fslider" data-arrows="false" data-animation="slide">
+							<div class="flexslider">
+								<div class="slider-wrap">
+									<div class="slide"><img src="images/projects/industrial/furniture_final.jpg" alt=""></div>
+								</div>
+							</div>
+						</div>
+					</div><!-- .portfolio-single-image end -->
+
+					<!-- Portfolio Single Content
+					============================================= -->
+					<div class="portfolio-single nobottommargin">
+
+						<!-- Portfolio Single - Description
+						============================================= -->
+						<div class="col_full_text col_full nobottommargin">
+							<p>I wanted to design a dining table set that could also be a conversational piece. The flowing wood pieces were inspired by Japanese tea sets, and the stiff steel screws by industrial furniture.</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
 
@@ -236,6 +229,24 @@
 					<h4 class="related-works">Other Works:</h4>
 
 					<div id="related-portfolio" class="owl-carousel portfolio-carousel carousel-widget" data-margin="30" data-nav="false" data-autoplay="5000" data-items-xs="1" data-items-sm="1" data-items-md="2" data-items-xl="3">
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/mechatronics.jpg" alt="Mechatronics">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="mechatronics.html" class="social-icon" title="Mechatronics">
+											<h4>A series of projects that were done as part of the Northwestern University Mechatronics courses.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
 
 						<div class="oc-item">
 							<div class="iportfolio">
@@ -287,24 +298,6 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Dyson Internship</h3>
-								</div>
-							</div>
-						</div>
-
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/projects/design.jpg" alt="Industrial Design">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="industrialdesign.html" class="social-icon" title="Industrial Design">
-											<h4>A product design class offered by the Segal Design Insititute that introduced me to the realm of product design.</h4>
-										</a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3>Industrial Design</h3>
 								</div>
 							</div>
 						</div>
