--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 									<div class="team-image">
 										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Robobrawl">
+											<a href="robobrawl.html" class="social-icon" title="Robobrawl">
 												<h3>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.
 												</h3>
 											</a>
@@ -228,7 +228,7 @@
 									<div class="team-image">
 										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="PSA GAME-IT Challenge">
+											<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
 												<h3>An exciting game-making competition that provided me with invaluable experience in programming. 
 												</h3>
 											</a>
@@ -245,7 +245,7 @@
 									<div class="team-image">
 										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
 										<div class="team-overlay">
-											<a href="#" class="social-icon" title="Milkwatch">
+											<a href="milkwatch.html" class="social-icon" title="Milkwatch">
 												<h3>A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.
 												</h3>
 											</a>
