--- a/robobrawl.html
+++ b/robobrawl.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Nickel Feeder</title>
+	<title>Yao Xin Meng | Robobrawl</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Nickel Feeder</h1>
+				<h1>Robobrawl</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -93,16 +93,14 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery - Nickel
+					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A capstone project to improve the health of a sea turtle</h2>
+					<h2 class="t300 bottommargin-sm">A robotics competition organised by University of Illinois Urbana-Champaign</h2>
 					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="true" data-animation="slide">
+						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/nickel/prototyping.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/idp_sketch.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/drawer.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/robobrawl/final.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -116,14 +114,14 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | Pneumatics | Arduino</li>
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> Mar 2018</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | 3D printing</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Ella | Peter | Mark | Yufei</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_edi7bB8CqKRETKgxmRvrfA" target="_blank"> Demo Video</a></li>
+										<li><span><i class="icon-users"></i>Team Members:</span> Jacob | John | Sisilia</li>
+										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
 									</ul>
 								</div>
 							</div>
@@ -139,15 +137,14 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>In collaboration with Shedd Aquarium, we wanted to encourage Nickel, the resident sea turtle, to have a healthy lifestyle. Due to her regular feeding schedule, Nickel was inactive for the majority of the day and was active only during feeding times.
-							<br><br>To tackle this problem, our initial design was an array of feeders that would activate when Nickel pressed a button. We hoped that this interaction would give Nickel a sense of control over her feeding times and therefore motivate her to be active outside of regular feeding times.
-							<br><br>To ensure that our feeder remained robust underwater, we powered it pneumatically. The pneumatics were controlled by a microcontroller at the surface, which gave us more control over the entire system. During the prototyping phase, we encountered unforeseen technical challenges with the pneumatics system that significantly delayed our plans. 
+							<p>
+								Our team wanted to create a robot that would dominate. To do so, we decided to build a lifting type robot. However, this type of robot had never been built before by the Northwestern Robotics Club and we had to start from scratch. 
+								<br><br>We designed the bodywork and lever mechanism of the robot, and I was placed in charge of creating the CAD files. Over the course of the quarter, we reiterated the design based on weight, material and fabrication constraints. 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release using the microcontroller-controlled electric valves. While Nickel no longer has control over her feeding times, this new design still introduces irregularity into her daily schedule. 
-							<br><br>From our testing at Shedd Aquarium, Nickel... 
+							<p>However, we eventually pulled out of the competition as the motor controllers that we ordered failed to arrive on time. Though it was disappointing, I was still glad to be given the opportunity to learn and try out something different. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -178,6 +175,24 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
@@ -232,24 +247,6 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Industrial Design</h3>
-								</div>
-							</div>
-						</div>
-
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
-											<h4>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.</h4>
-										</a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3>Robobrawl</h3>
 								</div>
 							</div>
 						</div>
