--- a/industrialdesign.html
+++ b/industrialdesign.html
@@ -100,7 +100,10 @@
 						<div class="fslider" data-arrows="true" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/dyson/app.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/industrial/collage1.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/industrial/collage2.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/industrial/collage3.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/industrial/collage4.jpg" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -309,7 +312,7 @@
 										<img src="images/projects/robobrawl.jpg" alt="Robobrawl">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Robobrawl">
+										<a href="robobrawl.html" class="social-icon" title="Robobrawl">
 											<h4>My first robotics competition was an invaluable learning experience in designing and fabricating things within practical constraints.</h4>
 										</a>
 									</div>
@@ -327,7 +330,7 @@
 										<img src="images/projects/PSA.jpg" alt="PSA GAME-IT Challenge">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="PSA GAME-IT Challenge">
+										<a href="psa.html" class="social-icon" title="PSA GAME-IT Challenge">
 											<h4>An exciting game-making competition that provided me with invaluable experience in programming.</h4>
 										</a>
 									</div>
@@ -345,7 +348,7 @@
 										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
 									</a>
 									<div class="portfolio-overlay">
-										<a href="#" class="social-icon" title="Milkwatch">
+										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
 											<h4>A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.</h4>
 										</a>
 									</div>
