--- a/milkwatch.html
+++ b/milkwatch.html
@@ -28,7 +28,7 @@
 
 	<!-- Document Title
 	============================================= -->
-	<title>Yao Xin Meng | Nickel Feeder</title>
+	<title>Yao Xin Meng | Milkwatch</title>
 	<link rel="icon" href="https://yaoxinmeng.github.io/favicon.ico">
 
 </head>
@@ -81,7 +81,7 @@
 		<section id="page-title">
 
 			<div class="container clearfix">
-				<h1>Nickel Feeder</h1>
+				<h1>Milkwatch</h1>
 			</div>
 
 		</section><!-- #page-title end -->
@@ -93,16 +93,14 @@
 
 				<div class="container clearfix">
 
-					<!-- Portfolio Single Gallery - Nickel
+					<!-- Portfolio Single Gallery - DTD
 					============================================= -->
-					<h2 class="t300 bottommargin-sm">A capstone project to improve the health of a sea turtle</h2>
+					<h2 class="t300 bottommargin-sm">A product that keeps track of the freshness of milk and inform users through an app interface</h2>
 					<div class="col_full portfolio-single-image">
-						<div class="fslider" data-arrows="true" data-animation="slide">
+						<div class="fslider" data-arrows="false" data-animation="slide">
 							<div class="flexslider">
 								<div class="slider-wrap">
-									<div class="slide"><img src="images/projects/nickel/prototyping.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/idp_sketch.jpg" alt=""></div>
-									<div class="slide"><img src="images/projects/nickel/drawer.jpg" alt=""></div>
+									<div class="slide"><img src="images/projects/milkwatch/cad.png" alt=""></div>
 								</div>
 							</div>
 						</div>
@@ -116,14 +114,14 @@
 							<div class="card-body">
 								<div class="col_half nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-calendar-check"></i>Completed on:</span> June 2019</li>
-										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | Pneumatics | Arduino</li>
+										<li><span><i class="icon-calendar-check"></i>Completed on:</span> Apr 2017</li>
+										<li><span><i class="icon-lightbulb"></i>Skills:</span> Solidworks | 3D printing</li>
 									</ul>
 								</div>
 								<div class="col_half col_last nobottommargin">
 									<ul class="portfolio-meta nobottommargin">
-										<li><span><i class="icon-users"></i>Team Members:</span> Ella | Peter | Mark | Yufei</li>
-										<li><span><i class="icon-link"></i>Gallery:</span><a href="https://www.youtube.com/playlist?list=PLr4FWeKNYt_edi7bB8CqKRETKgxmRvrfA" target="_blank"> Demo Video</a></li>
+										<li><span><i class="icon-users"></i>Team Members:</span> Felysse | Zhe Hao | Guan Yu | Li Ying</li>
+										<li><span><i class="icon-link"></i>Gallery:</span> None</li>
 									</ul>
 								</div>
 							</div>
@@ -139,15 +137,14 @@
 						<!-- Portfolio Single - Description
 						============================================= -->
 						<div class="col_half nobottommargin">
-							<p>In collaboration with Shedd Aquarium, we wanted to encourage Nickel, the resident sea turtle, to have a healthy lifestyle. Due to her regular feeding schedule, Nickel was inactive for the majority of the day and was active only during feeding times.
-							<br><br>To tackle this problem, our initial design was an array of feeders that would activate when Nickel pressed a button. We hoped that this interaction would give Nickel a sense of control over her feeding times and therefore motivate her to be active outside of regular feeding times.
-							<br><br>To ensure that our feeder remained robust underwater, we powered it pneumatically. The pneumatics were controlled by a microcontroller at the surface, which gave us more control over the entire system. During the prototyping phase, we encountered unforeseen technical challenges with the pneumatics system that significantly delayed our plans. 
+							<p>
+								This project started out as a simple idea – to give people accurate information regarding freshness of milk without having to taste or smell it. However, it quickly led to hours of research regarding the microbial fauna of milk, its curdling process, and the corresponding change in physical properties. 
+								<br><br>We eventually determined that the pH and dielectric constant are two easily detectable physical properties that indicate milk freshness. To measure these properties, we incorporated a pH indicator and a self-made capacitor into a custom milk jug. I was placed in charge of designing and fabricating the jug; I used Solidworks to create a CAD model of the jug and 3D-printed it. 
 							</p>
 						</div>
 
 						<div class="col_half col_last nobottommargin">
-							<p>As a result, we decided to simplify the design by removing the pneumatic push-button valve. In its place, we implemented a random release using the microcontroller-controlled electric valves. While Nickel no longer has control over her feeding times, this new design still introduces irregularity into her daily schedule. 
-							<br><br>From our testing at Shedd Aquarium, Nickel... 
+							<p>The Milkwatch jug was successful in detecting changes in microbial level and we realised that the fact that microbial levels affect the dielectric constant of the medium could have potential in non-chemical based detection of bacteria in water. 
 							</p>
 						</div>
 						<!-- Portfolio Single - Description End -->
@@ -178,6 +175,24 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>Mechatronics</h3>
+								</div>
+							</div>
+						</div>
+
+						<div class="oc-item">
+							<div class="iportfolio">
+								<div class="portfolio-image">
+									<a href="portfolio-single.html">
+										<img src="images/projects/nickel.jpg" alt="Open Imagination">
+									</a>
+									<div class="portfolio-overlay">
+										<a href="nickel.html" class="social-icon" title="Nickel Feeder">
+											<h4>A project in collaboration with the Shedd Aquarium to design a feeder for Nickel, the resident green sea turtle.</h4>
+										</a>
+									</div>
+								</div>
+								<div class="portfolio-desc">
+									<h3>Nickel Feeder</h3>
 								</div>
 							</div>
 						</div>
@@ -268,24 +283,6 @@
 								</div>
 								<div class="portfolio-desc">
 									<h3>PSA GAME-IT Challenge</h3>
-								</div>
-							</div>
-						</div>
-
-						<div class="oc-item">
-							<div class="iportfolio">
-								<div class="portfolio-image">
-									<a href="portfolio-single.html">
-										<img src="images/projects/milkwatch.jpg" alt="Milkwatch">
-									</a>
-									<div class="portfolio-overlay">
-										<a href="milkwatch.html" class="social-icon" title="Milkwatch">
-											<h4>A product that keeps you informed about the freshness of milk and predicts when your milk is about to spoil.</h4>
-										</a>
-									</div>
-								</div>
-								<div class="portfolio-desc">
-									<h3>Milkwatch</h3>
 								</div>
 							</div>
 						</div>
